--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Erin McLeod</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -22,14 +23,15 @@
 
             <nav class="main-nav">
                 <ul class="main-nav-list">
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="index2.html">Work</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index3.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
  <!--hero section-->             
         
@@ -116,16 +118,21 @@
                     <img class="About" src="images/IMG_9463.jpg" alt="about" width="380px">
                 </div>
                 <div class="item5">
-                    <a href="#">email.gmail.com</a>
+                    <a href="mailto: email@gmail.com">email@gmail.com</a>
                 </div>
             </div>
         </div>
     </footer>
 
  
+<!--<div class="preloader">
+    <img src="images/EMLogoFinal.png">
+</div>-->
 
-    
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
+
 </body>
 
-<script src="js/index.js"></script>
+
 </html>
