--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 that inspire collaboration. </h2>
         </div>
         <div class="container">
-            <img class="heroImg" src="images/IMG_9424.png" alt="hero">
+            <img class="heroImg" src="images/img_9424.png" alt="hero">
         </div>
         <div class="container">
             <h3>Currently working at a government incubator, Erin leverages over 15 years of experience in national security to  accelerate the adoption of industry-leading capabilities to advance mission imperatives. Her passion for user-driven design is breaking cultural barriers to innovation, one prototype at a time.</h3>
