--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RCFKPMW2H9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFSXQVMQ1Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RCFKPMW2H9');
+  gtag('config', 'G-TFSXQVMQ1Q');
 </script>
 </head>
 <body>
